--- a/week2/index.html
+++ b/week2/index.html
@@ -15,7 +15,7 @@
     <!-- 아이콘 적용 -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
 
-    <meta property="og:title" content = "멋사_현수">
+    <meta property="og:title" content = "Week2_Hyunsu">
     <meta property="og:description" content = "Welcome to Hyunsu's Webpage">
     <meta property="og:im age" content = "./meimg.jpg">
 
@@ -92,7 +92,7 @@
         <p>
             <b>
                 <i>
-                    <br>Buketlist
+                    <br>Bucketlist
                 </i>
             </b>
         </p>
